fix(css): fixed summary vertical alignment

--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -340,7 +340,7 @@ nav.navigation a.button {
     float: right;
     text-align: right;
     position: relative;
-    top: 1px;
+    top: 4px;
     color: #bbb;
 }
 
